frontend/src/styles/modules/Index.module.scss
@import '@styles/mediaQuery';

.button-block {
	display: flex;
	flex-wrap: wrap;
	justify-content: center;
	gap: 0.25rem;
}

.container {
	display: flex;
	flex-wrap: wrap;
	place-items: center;
	margin: 0 auto;

	@include breakpoint-range($from: mobile, $to: desktopSmall) {
		flex-direction: column;
	}

	@include breakpoint-range($from: desktopSmall, $to: desktopLarge) {
		flex-direction: row;
	}

	@include breakpoint-range($from: desktopSmall) {
		padding: 0.5rem 3rem;
	}
}

.section {
	width: fit-content;
	display: flex;
	flex-direction: column;
	flex-wrap: wrap;
	place-items: center;
	margin: 0 auto;
}

.cta {
	@extend .section;

	.text {
		padding: var(--paddingContainer);
		border-radius: var(--borderRadius);
		font-weight: 300;
		max-width: 30rem;
		text-align: center;
		color: var(--primary);

		& p {
			line-height: 1.2;
			font-size: 1.4rem;
			margin-top: 2rem;
		}
	}

	@include breakpoint-range($from: mobile) { 
		bottom: 15%;
	}

	@include breakpoint-range($from: desktop) {
		position: absolute;
		bottom: 20%;
		left: 12%;
	}
}

.model {
	width: 100vw;
	height: 95vh;

	@include breakpoint-range($from: mobile) {
		display: none;
	}

	@include breakpoint-range($from: desktop) {
		display: flex;
		position: absolute;
		bottom: 2%;
		right: 0%;
		margin:auto
	}
}

